--- a/themes/JuiceBar/layouts/partials/footer.html
+++ b/themes/JuiceBar/layouts/partials/footer.html
@@ -5,10 +5,10 @@
     {{- else }}
     <span>&copy; {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ site.Title }}</a></span>
     {{- end }}
-    <span>
+    <!-- <span>
         Powered by
         <a href="https://gohugo.io/" target="_blank">Hugo</a> &
         <a href="https://github.com/hotjuicew/hugo-JuiceBar" target="_blank">JuiceBar</a>
-    </span>
+    </span> -->
     </div>
   </footer>
