--- a/themes/JuiceBar/layouts/partials/toc.html
+++ b/themes/JuiceBar/layouts/partials/toc.html
@@ -2,7 +2,7 @@
 {{- if $toc -}}
     <!-- When the $toc variable is not empty, generate the table of contents for the article -->
     <div class="post-toc">
-        {{ if and (gt .WordCount 80) (.Params.toc | default true) }}
+        {{ if .Params.toc }}
             <aside>
                 <button id="tocButton" ><h4 id="contents" style="margin-left: 1vw;color:rgb(96, 134, 180);margin-bottom: 0;">CONTENTS</h4></button>
                 <div id="hide">
